2004-03-21  Michael Koch  <konqueror@gmx.de>

	* choose, choose-classes: Added handling for suppression testcases in
	BinaryCompatibility.* namespace.

2004-03-15  Michael Koch  <konqueror@gmx.de>

	* THANKS: Added myself.

2004-03-15  Michael Koch  <konqueror@gmx.de>

	* acinclude.m4: Correctly quote in AC_DEFUN.

2004-03-14  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/System/arraycopy.java: Add tests for copying
	arrays of different dimensions.

2004-03-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FilePermission/simple.java: Add test for dirs
	without a file separator.

2004-03-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/PrintWriter/checkError.java: New test.

2004-03-11  Mark Wielaard  <mark@klomp.org>

	* batch_run: Add jikes -bootclasspath example. Only show PASS: or
	FAIL: results (eliminate killed/terminated messages).
	* runner: Add jamvm example. Only kill when not KILLED (by timeout).
	
2004-03-11  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/util/logging/Handler/getErrorManager.java,
	gnu/testlet/java/util/logging/Handler/isLoggable.java,
	gnu/testlet/java/util/logging/Handler/reportError.java,
	gnu/testlet/java/util/logging/Handler/setEncoding.java,
	gnu/testlet/java/util/logging/Handler/setErrorManager.java,
	gnu/testlet/java/util/logging/Handler/setFilter.java,
	gnu/testlet/java/util/logging/Handler/setLevel.java,
	gnu/testlet/java/util/logging/Handler/TestErrorManager.java,
	gnu/testlet/java/util/logging/Handler/TestHandler.java,
	gnu/testlet/java/util/logging/Handler/TestSecurityManager.java:
	New files.

2004-03-09  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/BufferedInputStream/BigMark.java: New test.

2004-03-08  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/io/File/security.java : revamped testcase to
	use a test security manager to monitor the permissions checked.
	* gnu/testlet/TestSecurityManager2.java : new class
	